[package]
name = "zl"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
markdown = "1.0.0-alpha.16"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.19.1"
toml = "0.9.10"
